--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,7 @@ server:
   port: 8080
   servlet:
     context-path: /api
+
 spring:
   application:
     name: ecommerce-spring
@@ -9,3 +10,13 @@ spring:
     active: dev
   jpa:
     open-in-view: false
+  cache:
+    type: redis
+  redis:
+    host: ${REDIS_HOST:localhost}
+    port: ${REDIS_PORT:6379}
+    password: ${REDIS_PASS:redispass}
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
