refactor: do small changes in security impl

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -15,3 +15,9 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
