--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,10 +12,11 @@ spring:
     open-in-view: false
   cache:
     type: redis
-  redis:
-    host: ${REDIS_HOST:localhost}
-    port: ${REDIS_PORT:6379}
-    password: ${REDIS_PASS:redispass}
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
+      password: ${REDIS_PASS:redispass}
 
 springdoc:
   swagger-ui:
